--- a/templates/dashboard_layout.html.twig
+++ b/templates/dashboard_layout.html.twig
@@ -1,77 +1,133 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="//unpkg.com/alpinejs" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/unpoly@3.7.3/unpoly.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/unpoly@3.7.3/unpoly.min.css">
-    <script src="https://kit.fontawesome.com/e320a50358.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/unpoly@3.7.3/unpoly.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/e320a50358.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
-</head>
+  </head>
 
-<body x-data="{sidebarOpen: true}">
-
+  <body x-data="{sidebarOpen: true}">
     <div class="flex">
+      <div
+        class="fixed top-0 left-0 h-screen w-16 m-0 space-y-4 flex flex-col bg-gray-900 text-white shadow-lg text-3xl flex items-center pt-4"
+      >
+        <a
+          up-target="#content"
+          up-href="{{ path('dashboard_index') }}"
+          up-history="replace"
+          ><i class="fa-solid fa-house"></i
+        ></a>
+        <a
+          up-target="#content"
+          up-href="{{ path('dashboard_address_index') }}"
+          up-history="replace"
+          ><i class="fa-solid fa-map-location-dot"></i
+        ></a>
+        <a
+          up-target="#content"
+          up-href="{{ path('dashboard_company_index') }}"
+          up-history="replace"
+          ><i class="fa-solid fa-building"></i
+        ></a>
+        <a
+          up-target="#content"
+          up-href="{{ path('dashboard_user_index') }}"
+          up-history="replace"
+          ><i class="fa-solid fa-user"></i
+        ></a>
+        <a
+          up-target="#content"
+          up-href="{{ path('dashboard_person_index') }}"
+          up-history="replace"
+          ><i class="fa-solid fa-person"></i
+        ></a>
+        <a
+          up-target="#content"
+          up-href="{{ path('dashboard_mission_index') }}"
+          up-history="replace"
+          ><i class="fa-regular fa-clipboard"></i
+        ></a>
+        <a
+          up-target="#content"
+          up-href="{{ path('dashboard_supplier_index') }}"
+          up-history="replace"
+          ><i class="fa-solid fa-parachute-box"></i
+        ></a>
+      </div>
 
-        <div
-            class="fixed top-0 left-0 h-screen w-16 m-0 space-y-4 flex flex-col bg-gray-900 text-white shadow-lg text-3xl flex items-center pt-4">
-            <a href="{{ path('dashboard_index')}}"><i class="fa-solid fa-house"></i></a>
-            <a href="{{ path('dashboard_address_index')}}"><i class="fa-solid fa-map-location-dot"></i></a>
-            <a href="{{ path('dashboard_company_index')}}"><i class="fa-solid fa-building"></i></a>
-            <a href="{{ path('dashboard_user_index')}}"><i class="fa-solid fa-user"></i></a>
-            <a href="{{ path('dashboard_person_index')}}"><i class="fa-solid fa-person"></i></a>
-            <a href="{{ path('dashboard_mission_index')}}"><i class="fa-regular fa-clipboard"></i></a>
-            <a href="{{ path('dashboard_supplier_index')}}"><i class="fa-solid fa-parachute-box"></i></a>
-        </div>
+      <aside
+        :class="sidebarOpen ? ' w-72 hidden' : 'w-12'"
+        class="relative bg-slate-200 h-screen p-5 transition-all duration-300 flex flex-col"
+      >
+        <li
+          class="relative flex items-center py-2 px-3 my-1 font-medium rounded-md cursor-pointer transition-colors"
+        >
+          <a href="#" class="text-[#F0F0F0]">Dashboard</a>
+        </li>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-map"
+        >
+          <path
+            d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"
+          />
+          <path d="M15 5.764v15" />
+          <path d="M9 3.236v15" />
+        </svg>
+        <button
+          @click="sidebarOpen = !sidebarOpen"
+          class="absolute -right-3 top-20 cursor-pointer"
+        >
+          <div class="h-6 w-6 bg-black"></div>
+        </button>
+      </aside>
 
-        <aside :class="sidebarOpen ? ' w-72 hidden' : 'w-12'"
-            class=" relative bg-slate-200 h-screen p-5 transition-all duration-300 flex flex-col">
-            <li
-                class="relative flex items-center py-2 px-3 my-1 font-medium rounded-md cursor-pointer transition-colors">
-                <a href="#" class="text-[#F0F0F0]">Dashboard</a>
-            </li>
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                class="lucide lucide-map">
-                <path
-                    d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z" />
-                <path d="M15 5.764v15" />
-                <path d="M9 3.236v15" />
-            </svg>
-            <button @click="sidebarOpen = !sidebarOpen" class="absolute -right-3 top-20 cursor-pointer">
-                <div class="h-6 w-6 bg-black"></div>
-            </button>
-        </aside>
-
-        <div class="flex-col w-full h-screen">
-
-            <header class="w-full h-16 px-6 py-4 hidden">
-                <div class="lg:flex lg:justify-between space-y-3">
-                    <h1 class="text text-slate-900 font-semibold text-4xl tracking-tight">
-                        Manage your team
-                    </h1>
-                    <div class="flex space-x-3">
-                        <button class="bg-[#E6411C] text-[15px] text-[#F0F0F0] px-4 py-2 antialiased rounded-lg">
-                            Download CSV
-                        </button>
-                        <button class="bg-[#E6411C] text-[15px] text-[#F0F0F0] px-4 py-2 antialiased rounded-lg">
-                            + Add team member
-                        </button>
-                    </div>
-                </div>
-            </header>
-
-            <div id="content" class="pl-20 p-4">
-                {% block content %}{% endblock %}
+      <div class="flex-col w-full h-screen">
+        <header class="w-full h-16 px-6 py-4 hidden">
+          <div class="lg:flex lg:justify-between space-y-3">
+            <h1
+              class="text text-slate-900 font-semibold text-4xl tracking-tight"
+            >
+              Manage your team
+            </h1>
+            <div class="flex space-x-3">
+              <button
+                class="bg-[#E6411C] text-[15px] text-[#F0F0F0] px-4 py-2 antialiased rounded-lg"
+              >
+                Download CSV
+              </button>
+              <button
+                class="bg-[#E6411C] text-[15px] text-[#F0F0F0] px-4 py-2 antialiased rounded-lg"
+              >
+                + Add team member
+              </button>
             </div>
+          </div>
+        </header>
 
+        <div id="content" class="pl-20 p-4">
+          {% block content %}{% endblock %}
         </div>
-
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
