--- a/templates/dashboard/supplier/index.html.twig
+++ b/templates/dashboard/supplier/index.html.twig
@@ -1,37 +1,45 @@
 {% extends 'dashboard_layout.html.twig' %}
 
 {% block content %}
-    <h1>Supplier home page</h1>
 
-    <table>
-        <thead>
-        <tr>
-            <th>id</th>
-            <th>name</th>
-            <th>description</th>
-            <th>supplier</th>
-            <th>mission</th>
-            <th>created_at</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for supplier in supplierMissions %}
-            <tr>
-                <td>{{ supplier.id }}</td>
-                <td>{{ supplier.name }}</td>
-                <td>{{ supplier.description }}</td>
-                <td>{{ supplier.supplier.name ?? 'null' }}</td>
-                <td>{{ supplier.mission.name ?? 'null' }}</td>
-                <td>{{ supplier.createdAt|date('Y-m-d H:i:s') }}</td>
-                <td>
-                    <a href="{{ path('dashboard_supplier_show', {'id': supplier.id}) }}">show</a>
-                    <a href="{{ path('dashboard_supplier_edit', {'id': supplier.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-    <a href="{{ path('dashboard_supplier_new') }}">Create new</a>
+	<section>
+		{% include 'dashboard/components/button.html.twig' with {
+            'title': 'Supplier',
+            'button_text': 'Ajouter une company',
+            'button_url': path('dashboard_company_new') } %}
+            
+		<div class="mt-10 hidden md:flex md:flex-col">
+			<div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
+				<div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
+
+					<table class="min-w-full divide-y divide-gray-300">
+
+						<thead class="bg-gray-50">
+							{% include 'dashboard/components/table_header_row.html.twig' with {'columns': ['id', 'name',
+                        'description', 'supplier', 'mission', 'created-at']}%}
+						</thead>
+
+						<tbody class="divide-y divide-gray-200 bg-white">
+							{% for supplier in supplierMissions %}
+								{% include 'dashboard/components/table_row.html.twig' with {
+                        'columns': [
+                        {'data': supplier.id, 'classes': 'whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium
+                        text-gray-900 sm:pl-6'},
+                        {'data': supplier.name, 'classes': 'whitespace-nowrap px-3 py-4 text-sm text-gray-500'},
+                        {'data': supplier.description ?? 'null', 'classes': 'whitespace-nowrap px-3 py-4 text-sm
+                        text-gray-500'},
+                        {'data': supplier.mission.name ?? 'null', 'classes': 'whitespace-nowrap px-3 py-4 text-sm
+                        text-gray-500'},
+                        {'data': supplier.createdAt|date('Y-m-d H:i:s'), 'classes': 'whitespace-nowrap px-3 py-4 text-sm
+                        text-gray-500'}
+                        ]
+                        } %}
+							{% endfor %}
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</section>
 
 {% endblock %}
